more diagnostics direct buffer for socket writes better cpu utilization (WIP)